--- a/01-VScode创建.html
+++ b/01-VScode创建.html
@@ -8,14 +8,15 @@
   <title>创建VScode页面</title>
 </head>
 
-<body>
-  <br>
-  <center>这是第一个页面-999</center>
-  <a>测试第一个插件</a>
-  <h1>测试第二个插件</h1>
-  <h3>测试第三个插件</h3>
-  <h4>测试第四个插件</h4>
-  <h5>测试第五个插件</h5>
+
+<br>
+<center>这是第一个页面-999</center><!-- H5不支持这个标签 -->
+<a>测试第一个插件</a>
+<h1>测试第二个插件</h1>
+<h3>测试第三个插件</h3>
+<h4>测试第四个插件</h4>
+<h5>测试第五个插件</h5>
+<hr>
 </body>
 
 </html>
